--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,10 @@ input {
 #logo-register {
     
 }
+
+.enviar-register {
+    background-color: lightblue;
+    border-radius: 5px;
+    border: 1px solid #555;
+    margin: 5px 20px;
+}
