--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+body {
+    font-family: "Roboto", sans-serif;
+}
+
+header {
+    display: flex;
+}
+
 ul {
     list-style-type: none;
     margin: 10;
@@ -11,7 +19,7 @@ li {
 }
 
 form.register {
-    background-color: orange;
+    background-color: lightgray;
     border-radius: 20px;
     padding: 10px;
     margin: auto;
@@ -25,8 +33,12 @@ input {
     margin: 2px;
 }
 
-#logo-register {
-    box-sizing: content-box;
+#logo-register-login {
+    height: 70px;
+}
+
+#logonombre {
+    height: 70px;
 }
 
 .enviar-register {
