--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ html{
 
 header {
     display: flex;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.3);
+    position: fixed;
 }
 
 #buscador {
