--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ header {
     display: flex;
     background-color: rgba(255, 255, 255, 0.3);
     position: fixed;
+    width: 100%;
 }
 
 #buscador {
@@ -26,6 +27,10 @@ ul {
 li {
     padding: 10px;
 }
+
+a { text-decoration: none; }
+a:visited { text-decoration: none; color: black; }
+
 
 form.register {
     background-color: lightgray;
