--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 body {
     font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 10;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
     background-image: url("../img/fondohomeguitarra.jpg");
     background-position: bottom right;
     background-repeat: repeat;
@@ -8,8 +12,8 @@ body {
 header {
     display: flex;
     background-color: rgba(255, 255, 255, 0.3);
-    position: fixed;
-    width: 100%;
+    border-radius: 5px;
+    position: sticky;
 }
 
 #buscador {
@@ -62,3 +66,13 @@ input {
     margin: 5px 20px;
 }
 
+#foto-product {
+    width: 80%;
+}
+
+#seccion-product {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 1px;
+}
