--- a/css/styles.css
+++ b/css/styles.css
@@ -76,3 +76,10 @@ input {
     padding: 10px;
     margin: 10px 1px;
 }
+
+article{
+    background-color: rgba(255, 255, 255, 0.3);
+}
+.index{
+    width: 600px;
+}
