--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,9 @@ form.register {
     padding: 10px;
     margin: auto;
     width: 18%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 input {
