--- a/css/styles.css
+++ b/css/styles.css
@@ -139,5 +139,5 @@ footer {
     width: 100vw;
     height: 173.5px;
     color: black;
-    background-color: #555;
+    background-color: rgba(255, 255, 255, 0.3);
 }
