--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,9 @@ aside{
     width: 10%;
     padding-top: 15%;
 }
+div.aside{
+    margin: 20px 0 20px;
+}
 
 section.contenido{
     width: 90%;
