--- a/css/styles.css
+++ b/css/styles.css
@@ -139,12 +139,13 @@ article{
 .titulos{
     width: 100vw;
     height: 173.5px;
+    margin-right: 10px;
     color: black;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.64);
 }
 
 footer {
     background-color: lightgrey;
-    margin-bottom: 0%;
+    margin-top: 1125px;
     text-align: center;
 }
