--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ input {
 
 main{
     display: flex;
-
+    flex: 1;
     margin-top: 30px;
 }
 aside{
@@ -152,7 +152,7 @@ article{
 
 footer {
     background-color: lightgrey;
-    margin-top: 1125px;
+    margin-top: 10px;
     text-align: center;
 }
 
