--- a/css/styles.css
+++ b/css/styles.css
@@ -241,17 +241,31 @@ div.comprar{
 }
 
 @media (max-width: 768px) {
+    header {
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    position: sticky;
+    margin-right: 0;
+    }
     .titulos {
     width: 100%;
     height: 205px;
     margin: 20px 0px 20px 80px;
     padding: 5px;
+    margin-left: 1%;
     }
     aside {
     width: 16%;
     height: 100%;
     padding-top: 15%;
     }
+    section.contenido{
+    width: 77%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 20%;
+}
 }
 
 @media (max-width: 420px) {
