--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,28 @@ div.comprar{
     background-color: rgba(255, 255, 255, 0.3);
 }
 
+div.rating{
+    margin-left: 30px;
+}
+.sistRating{
+    display: none;
+}
+.stratoRating{
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-image: url("../img/stratorating.png");
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+}
+.sistRating:checked + .stratoRating{
+    background-image: url("../img/stratoratingmarcada.png");
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 .resultados {
     display: none;
 }
