--- a/css/styles.css
+++ b/css/styles.css
@@ -265,33 +265,66 @@ div.rating{
     padding: 20px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 420px) {
+    body {
+    background-position: center top;
+    background-attachment: scroll;
+  }
     header {
-    display: flex;
-    background-color: rgba(255, 255, 255, 0.3);
-    border-radius: 5px;
-    position: sticky;
-    margin-right: 0;
-    }
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+    ul {
+    flex-direction: column;
+    padding: 0;
+  }
+    a {
+    font-size: 16px;
+  }
+    main {
+    flex-direction: column;
+    margin-top: 10px;
+  }   
+    aside {
+    position: static;
+    width: 100%;
+    padding-top: 10px;
+    margin-bottom: 20px;
+  }
+    section.contenido {
+    width: 100%;
+    margin-left: 0;
+    padding: 0 10px;
+  }
+    section.art {
+    justify-content: center;
+    margin: 0;
+  }
+    article {
+    width: 100%;
+    margin: 10px 0;
+  }
     .titulos {
     width: 100%;
-    height: 205px;
-    margin: 20px 0px 20px 80px;
-    padding: 5px;
-    margin-left: 1%;
-    }
-    aside {
-    width: 16%;
-    height: 100%;
-    padding-top: 15%;
-    }
-    section.contenido{
-    width: 77%;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 20%;
-}
-}
-
-@media (max-width: 420px) {
+    height: auto;
+    font-size: 18px;
+  }
+    form.register {
+    width: 90%;
+  }
+    p.descripcion {
+    width: 100%;
+    font-size: 14px;
+  }
+    div.comprar {
+    width: 100%;
+    font-size: 20px;
+    margin: 20px auto;
+    text-align: center;
+  }
+    #vermas {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
