--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,18 @@ button {
     width: 100%;
     text-align: center;
     padding: 20px;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+#titulo-separacion2 {
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.64);
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    margin: 20px 3px 10px 3px;
+    border-radius: 5px;
 }
 
 section.contenido{
