--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,10 @@ div.rating{
 }
 
 .busqueda {
-    color: white;
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.64);
+    width: 100%; 
+    margin-top: 12px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding: 20px;
