--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@ div.rating{
 .pasarela {
     color: black;
     background-color: rgba(255, 255, 255, 0.64);
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding: 20px;
