--- a/css/styles.css
+++ b/css/styles.css
@@ -103,15 +103,17 @@ main{
 aside{
     background-color: rgba(255, 255, 255, 0.3);
     width: 10%;
-    height: 100%;
-    padding-top: 15%;
+    height: 100vh;
+    padding-top: 5%;
     padding-bottom: 15%;
     position: fixed;
     border-radius: 5px;
 }
 
 div.aside{
+    display: flex;
     margin: 20px 0 20px;
+    flex-direction: column;
 }
 
 button {
