--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,17 @@ footer {
     background-color: lightgrey;
     margin-top: 10px;
     text-align: center;
+    width: 100%;
+    position: bottom fixed;
+    
+}
+
+#foot {
+    background-color: lightgrey;
+    margin-top: 40%;
+    text-align: center;
+    width: 100%;
+    position: bottom fixed;
 }
 
 /*
