--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
 body {
@@ -104,8 +104,7 @@ aside{
     background-color: rgba(255, 255, 255, 0.3);
     width: 10%;
     height: 100vh;
-    padding-top: 5%;
-    padding-bottom: 15%;
+    padding-top: 30px;
     position: fixed;
     border-radius: 5px;
 }
