--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ main.product{
     display: flex;
     flex-direction: column;
 }
-#seccion-product {
+#seccionProduct {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 5px;
     padding: 10px;
