cambios del search

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,7 @@ article.cajaResenasClass{
     display: none;
 }
 
-#titulo-busqueda {
+#tituloBusqueda {
     color: rgb(0, 0, 0);
     background-color: rgba(255, 255, 255, 0.64);
     width: 100%; 
