--- a/css/styles.css
+++ b/css/styles.css
@@ -102,10 +102,9 @@ main{
 }
 aside{
     background-color: rgba(255, 255, 255, 0.3);
-    width: 10%;
-    height: 100vh;
+    width: 20%;
+    height: 100%;
     padding-top: 30px;
-    position: fixed;
     border-radius: 5px;
 }
 
@@ -147,7 +146,7 @@ section.contenido{
     width: 90%;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 10%;
+    margin-left: 1%;
 }
 
 #vermas {
